[gd_scene load_steps=4 format=3 uid="uid://hne2yl34q5xq"]

[ext_resource type="Script" path="res://Master.gd" id="1_m4if0"]
[ext_resource type="AudioStream" uid="uid://5rcx3id6k0c3" path="res://Sounds/click.ogg" id="2_bl513"]
[ext_resource type="AudioStream" uid="uid://dqavr2n14v88t" path="res://Sounds/start.ogg" id="3_rfre1"]

[node name="Master" type="Node2D"]
script = ExtResource("1_m4if0")

[node name="MasterMenu" type="Node2D" parent="."]

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bl513")
volume_db = -3.714
pitch_scale = 1.38

[node name="AudioStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rfre1")
